<resources>
    <string name="app_name">SportTracker</string>
    <string name="sporttracker">SportTracker</string>
    <string name="new_run">New Run</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="my_runs">My Runs</string>
    <string name="my_previous_runs">My Previous Runs</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="uuid">UUID</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="_18">18+</string>
    <string name="age">Age</string>
    <string name="after_pressing_record_point_the_camera_at_your_face_and_film_it_for_10_seconds_until_it_stops">After pressing record point the camera at your face and film it for 10 seconds until it stops.</string>
</resources>