<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:text="@string/uuid"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="52dp"
        android:text="@string/email"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="10dp"
        android:text="@string/username"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="32dp"
        android:text="@string/age"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioSex"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUUID"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="52dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/textView6" />
    <EditText
        android:id="@+id/etAge"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="124dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginBottom="348dp"
        android:text="@string/_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="231dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:checked="true"
            android:text="@string/male"
            tools:layout_editor_absoluteY="306dp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="128dp"
            android:text="@string/female"
            tools:layout_editor_absoluteY="306dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="236dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.921"
        android:onClick="onClickSave"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="236dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.921"
        android:onClick="onClickBack"/>


</androidx.constraintlayout.widget.ConstraintLayout>